@@ -1,3 +1,8 @@
+2005-02-24 Mikhail Khodjaiants
+	Applied patch from Tracy Miranda (bug 86540: NPE in CProjectSourceLocation).
+	The check for the project and synchronization are added to "initializeFolders".
+	* CProjectSourceLocation.java
+
 2005-02-03 Mikhail Khodjaiants
 	Fix for bug 84187: "Toggle Watchpoint" and "Toggle Method Breakpoint" don't work with C editor.
 	ICWatchpoint should extend ILineBreakpoint to allow watchpoints to be shown in editors.
